--- a/style.scss
+++ b/style.scss
@@ -36,7 +36,7 @@ a:hover {
 
 .main-content {
   padding: 8%;
-  text-align: center;
+  text-align: left;
   // width: 600px;
   margin: 0 auto;
   // background-color: red;
@@ -59,7 +59,7 @@ p {
 
     a {
       display: inline-block;
-      margin: 0 5px;
+      margin-right: 10px;
     }
   }
 }
