update stack order

--- a/index.pug
+++ b/index.pug
@@ -21,7 +21,7 @@ html
       p Jakarta/Bandung, Indonesia
       .space
       p.title Stacks
-      p JavaScript, Express, Vue, Sass
+      p Vue, JavaScript, Express, Sass
       .space
       p.title Handles
       p.handles
