--- a/index.pug
+++ b/index.pug
@@ -25,7 +25,7 @@ html
       .space
       p.title Handles
       p.handles
-        a(href='https://github.com/iqbalperkasa') Github
+        a(href='https://github.com/iqbalperkasa') GitHub
         a(href='https://twitter.com/iqbalperkasa') Twitter
         a(href='https://www.linkedin.com/in/iqbalperkasa') LinkedIn
         //- a(href='https://www.instagram.com/iqbalperkasa') Instagram
