--- a/index.pug
+++ b/index.pug
@@ -15,7 +15,7 @@ html
       p.title Currently
       p
         | Frontend engineer,&nbsp;
-        a(href='https://www.bukalapak.com') Bukalapak
+        a(href='https://www.linkedin.com/company/pt-bukalapak-com') Bukalapak
       .space
       p.title Lives in
       p Jakarta/Bandung, Indonesia
