--- a/index.pug
+++ b/index.pug
@@ -17,7 +17,7 @@ html
         | Frontend engineer,&nbsp;
         a(href='https://www.linkedin.com/company/pt-bukalapak-com') Bukalapak
       .space
-      p.title Lives in
+      p.title Residence
       p Jakarta/Bandung, Indonesia
       .space
       p.title Stacks
