--- a/index.pug
+++ b/index.pug
@@ -29,4 +29,5 @@ html
         a(href='https://twitter.com/iqbalperkasa') Twitter
         a(href='https://www.linkedin.com/in/iqbalperkasa') LinkedIn
         a(href='https://drive.google.com/file/d/1IYpbug-9Rzx1UY3OnPPCiWnFv0d5hTV2/view') Resume
+        a(href='https://iqbalperkasa.com/portfolio') Portfolio
         //- a(href='https://www.instagram.com/iqbalperkasa') Instagram
