nitip: update fonts

--- a/index.pug
+++ b/index.pug
@@ -3,7 +3,8 @@ html
   head
     title Iqbal Perkasa
     include ./meta.pug
-    link(href='https://fonts.googleapis.com/css?family=Roboto:400' rel='stylesheet')
+    link(rel='preconnect' href='https://fonts.gstatic.com')
+    link(href='https://fonts.googleapis.com/css2?family=Inter&display=swap' rel='stylesheet')
     link(href='./style.scss' rel='stylesheet')
   body
     main.main-content
