--- a/style.scss
+++ b/style.scss
@@ -17,7 +17,7 @@ body {
   color: #666;
   font-size: 1.2rem;
   line-height: 2;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Inter', sans-serif;
   font-weight: 400;
 }
 
