--- a/index.pug
+++ b/index.pug
@@ -3,7 +3,8 @@ html
   head
     title Iqbal Perkasa
     include ./meta.pug
-    link(href='https://fonts.googleapis.com/css?family=Roboto:400' rel='stylesheet')
+    link(rel='preconnect' href='https://fonts.gstatic.com')
+    link(href='https://fonts.googleapis.com/css2?family=Inter&display=swap' rel='stylesheet')
     link(href='./style.scss' rel='stylesheet')
   body
     main.main-content
@@ -28,6 +29,6 @@ html
         a(href='https://github.com/iqbalperkasa') GitHub
         a(href='https://twitter.com/iqbalperkasa') Twitter
         a(href='https://www.linkedin.com/in/iqbalperkasa') LinkedIn
-        a(href='https://drive.google.com/file/d/1IYpbug-9Rzx1UY3OnPPCiWnFv0d5hTV2/view') Resume
+        a(href='https://iqbalperkasa.com/resume') Resume
         a(href='https://iqbalperkasa.com/portfolio') Portfolio
         //- a(href='https://www.instagram.com/iqbalperkasa') Instagram
